<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    android:layout_gravity="center"
    android:layout_marginHorizontal="30dp"
    android:background="@drawable/bg_login_policy"
    android:backgroundTint="@color/white">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/login_policy_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/lof"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_policy_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/login_policy_logo"
        app:layout_constraintTop_toTopOf="@id/login_policy_logo" />

    <TextView
        android:id="@+id/login_policy_team_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_name"
        app:layout_constraintStart_toStartOf="@id/login_policy_app_name"
        app:layout_constraintTop_toBottomOf="@id/login_policy_app_name" />

    <View
        android:id="@+id/login_policy_app_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="7dp"
        android:background="#A2A2A2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_policy_logo" />

    <CheckBox
        android:id="@+id/login_policy_check_all"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginVertical="5dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/login_policy_check_box"
        android:button="@android:color/transparent"
        android:checked="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_policy_app_line" />

    <TextView
        android:id="@+id/login_policy_check_all_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/login_policy_accept_all"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/login_policy_check_all"
        app:layout_constraintStart_toEndOf="@id/login_policy_check_all"
        app:layout_constraintTop_toTopOf="@id/login_policy_check_all" />

    <LinearLayout
        android:id="@+id/login_policy_accept_area"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_login_policy_accept_btn"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept_and_continue"
            android:textColor="#777777"
            android:textSize="16sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/login_policy_accept_area"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_policy_check_all">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/accept_all_text"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginHorizontal="30dp"
                android:text='@string/accept_all_text'
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/login_policy_accept_area_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="5dp"
                android:background="#A2A2A2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/accept_all_text" />

            <TextView
                android:id="@+id/login_policy_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="5dp"
                android:text="@string/login_policy_detail"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_policy_accept_area_line" />

            <View
                android:id="@+id/login_policy_detail_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="5dp"
                android:background="#A2A2A2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_policy_detail" />


            <CheckBox
                android:id="@+id/login_policy_personal_required_checkbox"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_policy_check_box"
                android:button="@android:color/transparent"
                android:checked="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_policy_detail_line" />

            <TextView
                android:id="@+id/login_policy_personal_required"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/login_policy_personal_required"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@id/login_policy_personal_required_checkbox"
                app:layout_constraintEnd_toStartOf="@id/login_policy_personal_required_view_more"
                app:layout_constraintStart_toEndOf="@id/login_policy_personal_required_checkbox"
                app:layout_constraintTop_toTopOf="@id/login_policy_personal_required_checkbox" />

            <TextView
                android:id="@+id/login_policy_personal_required_view_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/login_policy_view_more"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/login_policy_personal_required_checkbox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/login_policy_personal_required_checkbox" />

            <TextView
                android:id="@+id/login_policy_optional_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/login_policy_optional_text"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@id/login_policy_personal_required_checkbox"
                app:layout_constraintEnd_toStartOf="@id/login_policy_personal_optional_view_more"
                app:layout_constraintTop_toBottomOf="@id/login_policy_personal_required" />

            <TextView
                android:id="@+id/login_policy_personal_optional_view_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/login_policy_view_more"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/login_policy_optional_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/login_policy_optional_text" />

            <CheckBox
                android:id="@+id/login_policy_personal_optional_nickname_checkbox"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_policy_check_box"
                android:button="@android:color/transparent"
                android:checked="false"
                app:layout_constraintStart_toStartOf="@id/login_policy_optional_text"
                app:layout_constraintTop_toBottomOf="@id/login_policy_optional_text" />

            <TextView
                android:id="@+id/login_policy_optional_optional_nickname_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/login_policy_optional_optional_nickname_text"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@id/login_policy_personal_optional_nickname_checkbox"
                app:layout_constraintStart_toEndOf="@id/login_policy_personal_optional_nickname_checkbox"
                app:layout_constraintTop_toTopOf="@id/login_policy_personal_optional_nickname_checkbox" />

            <CheckBox
                android:id="@+id/login_policy_personal_optional_photo_checkbox"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_policy_check_box"
                android:button="@android:color/transparent"
                android:checked="false"
                app:layout_constraintStart_toStartOf="@id/login_policy_personal_optional_nickname_checkbox"
                app:layout_constraintTop_toBottomOf="@id/login_policy_personal_optional_nickname_checkbox" />

            <TextView
                android:id="@+id/login_policy_optional_optional_photo_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/login_policy_optional_optional_photo_text"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@id/login_policy_personal_optional_photo_checkbox"
                app:layout_constraintStart_toEndOf="@id/login_policy_personal_optional_photo_checkbox"
                app:layout_constraintTop_toTopOf="@id/login_policy_personal_optional_photo_checkbox" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>